--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,6 +44,10 @@
   padding: 0;
 }
 
+.hidden {
+  display: none !important;
+}
+
 html {
   overflow-x: hidden;
 }
